Fixed scrollbar

--- a/css/base.css
+++ b/css/base.css
@@ -15,7 +15,7 @@ body {
 	margin-top: -10px;
 	margin-left: -10px;
 	margin-right: -10px;
-	opacity: 0.85;
+	opacity: 0.95;
 	z-index: 20;
 }
 
@@ -123,14 +123,15 @@ body {
 	background-image: url("../images/content_background.png");
 	position: absolute;
 	width: 100%;
-	top: 0px;
+	top: 50px;
 	bottom: 0px;
-	min-height: 100%;
+	min-height: calc(100%-50px);
 	margin-left: -8px;
 	margin-top: -2px;
 	margin-bottom: 0px;
 	display: none;
 	z-index: 1;
+	overflow: auto;
 }
 
 .content div{
